@@ -84,6 +84,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-936: TestStorages::testSplitable is failed occasionally. (jinho)
+
     TAJO-673: Assign proper number of tasks when inserting into partitioned table. (jaehwa)
 
     TAJO-916: SubQuery::computeStatFromTasks occasionally fail.
